--- a/5-2编译结果中的模块化.md
+++ b/5-2编译结果中的模块化.md
@@ -32,3 +32,5 @@ TS中的模块化在编译结果中
 - 如果编译结果的模块化标准是ES6:没有区别
 - 如果编译结果的模块化标准是commonjs：导出的声明变成exports的属性，默认的导出会变成exports的default属性；
 
+# 如何在TS中书写commonjs模块化代码
+
