--- a/12-1装饰器概念.md
+++ b/12-1装饰器概念.md
@@ -27,3 +27,35 @@
 - 类
 - 成员（属性+方法）
 - 参数
+
+## 类装饰器
+
+类装饰器本质是一个函数，该函数接受一个参数，表示类本身（构造函数本身）
+
+使用装饰器```@得到一个函数```
+
+在TS中，如何约束一个变量为类
+
+- Function
+- ```new (参数)=> object ```
+
+在TS中使用装饰器，需要开启```"experimentalDecorators":true,```
+
+装饰器函数的运行时间点：在类定义后直接运行
+
+类装饰器可以具有的返回值
+
+- void:仅运行函数
+- 返回一个新的类：会将新的类替换掉装饰器目标
+
+多个装饰器的情况：会按照后加入先调用的顺序将进行调用
+
+## 成员装饰器
+
+- 属性
+
+属性的装饰器也是一个函数，该函数需要两个参数：
+1. 如果是静态属性，则为类本身；如果是实例属性，则为类本身
+2. 固定为一个字符串，表示属性名
+
+- 方法
