--- a/12-1装饰器概念.md
+++ b/12-1装饰器概念.md
@@ -55,7 +55,14 @@
 - 属性
 
 属性的装饰器也是一个函数，该函数需要两个参数：
-1. 如果是静态属性，则为类本身；如果是实例属性，则为类本身
+1. 如果是静态属性，则为类本身；如果是实例属性，则为类原型
 2. 固定为一个字符串，表示属性名
 
 - 方法
+
+方法装饰器也是一个函数，该函数需要三个参数：
+1. 如果是静态方法，则为类本身；如果是实例方法，则为类的原型；
+2. 固定为一个字符串，表示方法名
+3. 属性描述对象
+
+可以有多个装饰器修饰
