--- a/12-1装饰器概念.md
+++ b/12-1装饰器概念.md
@@ -73,5 +73,30 @@
 
 该库的作用：保存元数据
 
-
 ## class-validator和class-transformer库
+
+## 补充
+
+- 参数装饰器
+
+依赖注入，依赖倒置
+
+要求函数有三个参数：
+
+1. 如果方法是静态的，则为类本身；如果方法是实例方法，则为类的原型
+2. 方法名称
+3. 在参数列表中的索引
+
+- 关于TS自动注入的元数据
+
+如果安装```reflect-metadata```,并且导入了该库，并且在某个成员上添加了元数据，并且启用了```"emitDecoratorMetadata": true,```
+
+则Ts在编译结果中，会将约束的类型，作为元数据加入到相应的位置
+
+这样一来，TS的类型检查（约束）将有机会在运行是进行。
+
+- AOP
+
+编程方式，属于面向对象开发
+
+将一些在业务中共同出现的功能块，横向切分，已达到分离关注点的目的。
