--- a/14声明文件.md
+++ b/14声明文件.md
@@ -14,3 +14,44 @@
 - 放置到node_modules/@types文件夹中
 - 手动配置
 - 与JS代码所在目录相同，并且文件名也相同的文件。用ts代码书写的工程发布之后的格式
+
+## 编写
+
+> 手动编写 自动生成
+
+- 自动生成
+
+工程是使用ts开发的，发布（编译）之后，是js文件，发布的是js文件
+
+如果发布的文件，需要其他的开发者使用,可以使用声明文件，来描述发布结果中的类型
+
+配置```tsconfig.json```中的```declaration:true```即可
+
+- 手动编写
+
+1. 对已有库，它使用js书写而成，并且更改该库的代码为ts成本较高，可以手动编写声明文件
+
+2. 对一些第三方库，它们使用js书写而成，并且这些第三方库没有提供声明文件，可以手动编写声明文件。
+
+
+**全局声明**
+
+声明一些全局的对象、属性、变量
+
+> namespace:表示命名空间，可以将其认为是一个对象，命名空间中的内容，必须通过```命名空间.成员名```访问
+
+**模块声明**
+
+**三斜线指令**
+
+在声明文件中，包含另一个声明文件
+
+## 发布
+
+1. 当前工程使用ts开发
+
+编译完成后，将编译结果所在文件夹直接发布到npm上即可
+
+2. 为其他第三方库开发的声明文件
+
+发布到@type/**中
