--- a/2-1.安装Ts.md
+++ b/2-1.安装Ts.md
@@ -4,8 +4,8 @@
 
 > 中文网：https://www.tslang.cn/ 个人翻译
 
-**额外惊喜**
-
+**额外惊喜**    
+dsds
 有了类型检查，增强了面向对象的开发
 
 js中也有类对象，js支持面向对象开发。没有类型检查，很多面向对象的场景实现起来有很对问题。
